sumo/tests/netconvert/errors/XML/broken_edge/edge#tonode__empty4/errors.netconvert
Error: Neither the name nor the position of the to-node is given for edge '4'.
Quitting (on error).
